<resources>
    <string name="app_name">Aisle</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Discover</string>
    <string name="title_notes">Notes</string>
    <string name="title_profile">Profile</string>
    <string name="title_matches">Matches</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp">Enter The OTP</string>
    <string name="continue_">Continue</string>
    <string name="notes">Notes</string>
    <string name="personal_message_to_you">Personal message to you</string>
    <string name="interested_in_you">Interested In You</string>
    <string name="upgrade">Upgrade</string>
    <string name="premium_members_can_view_all_their_likes_at_once">Premium members can view all their likes at once</string>

</resources>