<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.aisle.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.aisle.ui.notes.NotesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.aisle.ui.matches.MatchFragment"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.aisle.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>