<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.ui.login.LoginActivity">

    <TextView
        android:id="@+id/tvOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/get_otp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_phone_number"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtp" />
    
    <TextView
        android:id="@+id/tvCountryCode"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:text="+91"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/round_corner"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="147dp"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner"
        android:gravity="center"
        android:text="9876543212"
        android:maxLength="10"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/tvCountryCode"
        app:layout_constraintTop_toBottomOf="@id/tvPhone"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/continue_"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/tvCountryCode"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>